WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68737
REGRESSION (
r95391
): Crash in -[WebCascadeList objectAtIndex:] when a font-family list contains missing fonts
https://bugs.webkit.org/show_bug.cgi?id=68737
Summary
REGRESSION (r95391): Crash in -[WebCascadeList objectAtIndex:] when a font-fa...
mitz
Reported
2011-09-23 15:17:16 PDT
As reported by James Robinson in
bug 68287 comment #20
: <div style="font-family: verdana, a-font-you-do-not-have;"> î and i̿ </div>
Attachments
Patch
(3.86 KB, patch)
2011-09-23 15:31 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-09-23 15:18:15 PDT
<
rdar://problem/10178576
>
mitz
Comment 2
2011-09-23 15:31:52 PDT
Created
attachment 108547
[details]
Patch
mitz
Comment 3
2011-09-23 15:44:45 PDT
Committed
r95874
.
http://trac.webkit.org/changeset/95874
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug