<rdar://problem/10178576> REGRESSION (r95391): Crash in -[WebCascadeList objectAtIndex:] when a font-family list contains missing fonts https://bugs.webkit.org/show_bug.cgi?id=68737

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/text/combining-character-sequence-fallback-crash.html

* platform/graphics/mac/ComplexTextControllerCoreText.mm:
(-[WebCascadeList initWithFont:WebCore::character:]): Changed to intialize _count to the exact
number of FontData instances in the fallback list rather than the number of font families in the
font description.

LayoutTests:

* fast/text/combining-character-sequence-fallback-crash-expected.txt: Added.
* fast/text/combining-character-sequence-fallback-crash.html: Added.



Canonical link: https://commits.webkit.org/84693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95874 268f45cc-cd09-0410-ab3c-d52691b4dbfc